--- a/src/Home/style.less
+++ b/src/Home/style.less
@@ -88,9 +88,10 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        border-radius: 6px;
+        border-radius: 8px;
         transform: scale(0.83333);
         transform-origin: 100% 50%;
+        visibility: hidden;
       }
 
       .castPlayer {
@@ -103,39 +104,46 @@
 
       .terminal {
         overflow: hidden;
-        overflow-y: scroll;
 
-        &::-webkit-scrollbar-track {
-          background: rgba(0, 0, 0, 0.9);
-          box-shadow: 0 none;
-        }
+        .terminalContainer {
+          width: 100%;
+          height: 100%;
+          overflow: hidden;
+          overflow-y: scroll;
 
-        &::-webkit-scrollbar {
-          width: 10px;
-          background: none;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          background: rgba(255, 255, 255, 0.8);
-          border-radius: 10px;
-        }
-
-        :global {
-          .prism-code {
-            margin: 0;
-            padding: 6px;
+          &::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.9);
+            box-shadow: 0 none;
           }
 
-          code[class*='language-'],
-          pre[class*='language-'] {
-            font-size: 12px;
-            text-shadow: none !important;
+          &::-webkit-scrollbar {
+            width: 10px;
+            background: none;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 1);
+            border-radius: 10px;
+          }
+
+          :global {
+            .prism-code {
+              margin: 0;
+              padding: 9px;
+            }
+
+            code[class*='language-'],
+            pre[class*='language-'] {
+              font-size: 12px;
+              text-shadow: none !important;
+            }
           }
         }
       }
 
       .active {
         z-index: 11;
+        visibility: visible;
       }
 
       // 切换
