--- a/src/Home/style.less
+++ b/src/Home/style.less
@@ -1,5 +1,3 @@
-@import '~antd/dist/antd.css';
-
 .home {
   font-size: 14px;
   line-height: 1.5;
@@ -10,11 +8,10 @@
 
   // banner
   .banner {
-    position: relative;
-    z-index: 0;
     display: flex;
     align-items: center;
     height: 600px;
+    margin: 0 auto;
     background-color: #ffffff;
     background-image: radial-gradient(#878787 0.5px, transparent 0.5px);
     background-size: 10px 10px;
@@ -26,7 +23,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 1200px;
+      width: 1100px;
       height: 500px;
       margin: 0 auto;
 
@@ -34,17 +31,18 @@
         margin: 0 0 24px;
         color: #000;
         font-weight: 500;
-        font-size: 50px;
-        font-size: 50px;
+        font-size: 38px;
       }
 
       p {
-        width: 485px;
-        margin: 0 0 14px;
+        width: 410px;
+        margin: 0;
+        padding: 4px;
         color: #333;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 1.5;
-        text-align: justify;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 6px;
       }
 
       .action {
@@ -68,97 +66,107 @@
           }
         }
       }
-    }
 
-    .termDemo {
-      position: absolute;
-      top: 50px;
-      bottom: 0;
-      left: 36%;
-      z-index: 10;
-      width: 800px;
-      height: 500px;
-      overflow: hidden;
-
-      .castPlayer,
-      .terminal {
+      .termDemo {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        border-radius: 8px;
-        transform: scale(0.83333);
-        transform-origin: 100% 50%;
-        visibility: hidden;
-      }
-
-      .castPlayer {
-        :global {
-          .asciinema-player-wrapper {
-            background: #000;
-          }
-        }
-      }
-
-      .terminal {
+        top: 0px;
+        right: 0;
+        bottom: 0;
+        z-index: 10;
+        width: 800px;
+        height: 500px;
         overflow: hidden;
 
-        .terminalContainer {
+        .castPlayer,
+        .terminal {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
           height: 100%;
           overflow: hidden;
-          overflow-y: scroll;
+          border-radius: 8px;
+          transform: scale(0.83333);
+          transform-origin: 100% 50%;
+          visibility: hidden;
+        }
 
-          &::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, 0.9);
-            box-shadow: 0 none;
-          }
-
-          &::-webkit-scrollbar {
-            width: 10px;
-            background: none;
-          }
-
-          &::-webkit-scrollbar-thumb {
-            background: rgba(255, 255, 255, 1);
-            border-radius: 10px;
-          }
-
+        .castPlayer {
           :global {
-            .prism-code {
-              margin: 0;
-              padding: 9px;
-            }
-
-            code[class*='language-'],
-            pre[class*='language-'] {
-              font-size: 12px;
-              text-shadow: none !important;
+            .asciinema-player-wrapper {
+              background: #000;
             }
           }
         }
-      }
 
-      .active {
-        z-index: 11;
-        visibility: visible;
-      }
+        .terminal {
+          overflow: hidden;
 
-      // 切换
-      .switch {
-        position: absolute;
-        right: 5px;
-        bottom: 10px;
-        display: flex;
-        align-items: center;
-        color: #666;
-        font-size: 12px;
+          .terminalContainer {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            overflow-y: scroll;
 
-        :global {
-          .ant-switch {
-            margin: 0 0 0 8px;
+            &::-webkit-scrollbar-track {
+              background: rgba(0, 0, 0, 1);
+              box-shadow: none;
+            }
+            &::-webkit-scrollbar {
+              width: 6px;
+              background: none;
+            }
+            &::-webkit-scrollbar-thumb {
+              background: #878787;
+              border-radius: 6px;
+            }
+
+            :global {
+              .prism-code {
+                margin: 0;
+                padding: 9px;
+                background: #121314 !important;
+              }
+
+              code[class*='language-'],
+              pre[class*='language-'] {
+                font-size: 12px;
+                text-shadow: none !important;
+              }
+
+              .token-line {
+                line-height: 1.33333em;
+              }
+              .token,
+              .operator,
+              .number,
+              .string {
+                color: #ccc !important;
+                background: none !important;
+              }
+            }
+          }
+        }
+
+        .active {
+          z-index: 11;
+          visibility: visible;
+        }
+
+        // 切换
+        .switch {
+          position: absolute;
+          right: 5px;
+          bottom: 10px;
+          display: flex;
+          align-items: center;
+          color: #666;
+          font-size: 12px;
+
+          :global {
+            .ant-switch {
+              margin: 0 0 0 8px;
+            }
           }
         }
       }
@@ -170,7 +178,7 @@
     display: grid;
     grid-column-gap: 72px;
     grid-template-columns: repeat(4, 1fr);
-    width: 1200px;
+    width: 1100px;
     margin: 0 auto;
     padding: 72px 0;
 
