--- a/src/ApiDoc/style.less
+++ b/src/ApiDoc/style.less
@@ -117,8 +117,8 @@
 
             p {
               display: block;
-              width: 100%;
               margin: 0;
+              padding: 0 12px 0 0;
               overflow: hidden;
               color: rgba(69, 77, 100, 0.7);
               font-size: 12px;
