--- a/src/ApiDoc/style.less
+++ b/src/ApiDoc/style.less
@@ -1,208 +1,37 @@
-@import '~antd/dist/antd.css';
+.uploader {
+  width: 600px;
+  margin: 200px auto;
 
-.apiDoc {
-  position: relative;
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  height: calc(100vh - 64px);
-  color: #454d64;
+  :global {
+    .anticon {
+      margin: 0 0 16px 0;
+      color: #40a9ff;
+      font-size: 48px;
+    }
 
-  &:after {
-    position: absolute;
-    top: 0;
-    left: 360px;
-    width: 1px;
-    height: 100%;
-    background: #ebedf1;
-    content: '';
+    h5 {
+      margin: 0 0 12px 0;
+      color: #333;
+      font-size: 16px;
+    }
+
+    p {
+      margin: 0;
+      color: rgba(0, 0, 0, 0.4);
+      font-size: 14px;
+    }
   }
 
-  // 菜单
-  .menu {
+  .example {
     display: flex;
-    width: 360px;
-    height: 100%;
-    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 0 0;
+    font-size: 12px;
 
-    .apiTab {
-      display: flex;
-      flex: 1;
-      flex-direction: column;
-      padding: 16px 0 0;
-
-      .tabHead {
-        position: relative;
-        display: flex;
-        padding: 0 0 0 16px;
-
-        &:before {
-          position: absolute;
-          top: 35px;
-          left: 0;
-          width: 100%;
-          height: 1px;
-          background: #ebebeb;
-          content: '';
-        }
-
-        span {
-          margin: 0 8px 0 0;
-          padding: 6px 12px;
-          font-weight: 600;
-          line-height: 22px;
-          background: #fafafa;
-          border: 1px solid #ebebeb;
-          border-radius: 3px 3px 0 0;
-          cursor: pointer;
-        }
-
-        .activeTab {
-          position: relative;
-          background: #fff;
-          border-bottom-color: #fff;
-        }
-      }
-
-      .tabBody {
-        display: flex;
-        flex: 1;
-        width: 100%;
-        overflow: hidden;
-
-        .tabContent {
-          display: none;
-          flex: 1;
-          width: 360px;
-          padding: 12px;
-          overflow: hidden;
-          overflow-y: auto;
-
-          .foldTitle {
-            position: relative;
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-            width: 100%;
-            margin: 0 0 6px 0;
-            padding: 4px 0 4px 24px;
-            overflow: hidden;
-            border-radius: 4px;
-            cursor: pointer;
-
-            &:hover {
-              background: rgba(0, 0, 0, 0.06);
-            }
-
-            :global {
-              .anticon {
-                position: absolute;
-                top: 9px;
-                left: 6px;
-                font-size: 10px;
-              }
-            }
-
-            h3 {
-              width: 100%;
-              margin: 0;
-              overflow: hidden;
-              font-size: 12px;
-              line-height: 18px;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-            }
-
-            p {
-              display: block;
-              width: calc(100% - 12px);
-              margin: 0;
-              overflow: hidden;
-              color: rgba(69, 77, 100, 0.7);
-              font-size: 12px;
-              line-height: 18px;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-            }
-          }
-
-          .activeTitle {
-            background: rgba(0, 0, 0, 0.1);
-          }
-        }
-        .activeContent {
-          display: block;
-        }
-      }
-    }
-  }
-
-  .main {
-    position: relative;
-    z-index: 0;
-    flex: 1;
-    padding: 30px;
-    overflow: hidden;
-    overflow-y: auto;
-
-    .projectHead {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-      font-size: 12px;
-    }
-
-    .card {
-      display: flex;
-      flex-direction: column;
-      margin: 0 0 64px 0;
-
-      .cardTitle {
-        display: flex;
-        align-items: center;
-        margin: 0 0 24px 0;
-        font-weight: bolder;
-        font-size: 14px;
-
-        :global {
-          .ant-tag {
-            margin: 0;
-            transform: scale(0.77);
-            transform-origin: 0 50%;
-          }
-        }
-      }
-
-      .desc {
-        margin: 0 0 16px;
-        padding: 4px 12px;
-        color: rgba(69, 77, 100, 0.7);
-        border-left: 4px solid #ebedf1;
-      }
-
-      // 入参及返回值
-      .content {
-        :global {
-          .ant-empty {
-            margin: 0;
-            padding: 16px 0;
-          }
-        }
-        .contentItem {
-          margin: 0 0 24px 0;
-
-          :global {
-            .ant-btn {
-              margin: 0;
-              padding: 0;
-            }
-          }
-        }
-        .fieldList {
-          display: flex;
-        }
+    :global {
+      .ant-btn {
+        font-size: 12px;
       }
     }
   }
