--- a/src/Home/style.less
+++ b/src/Home/style.less
@@ -209,4 +209,17 @@
       }
     }
   }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    color: rgba(0, 0, 0, 0.6);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+    a {
+      margin: 0 0 0 4px;
+    }
+  }
 }
