--- a/src/ApiDoc/doc/style.less
+++ b/src/ApiDoc/doc/style.less
@@ -243,10 +243,10 @@
           transform-origin: 0 50%;
         }
         .getApi {
-          background: #108ee9;
+          background: #87d068;
         }
         .postApi {
-          background: rgb(255, 85, 0);
+          background: #108ee9;
         }
       }
 
